test_scores/negative_dimers/features/A1X283.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/A1X283.pkl.xz